# meraki_rm

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  conftest.py  galaxy.yml  pyproject.toml  requirements-dev.txt  requirements.txt
plugins/plugin_utils/: mock.py  pyproject.toml
plugins/plugin_utils/cli/: __init__.py  main.py
plugins/plugin_utils/manager/: platform_manager.py  rpc_client.py
plugins/plugin_utils/mcp/: __init__.py  introspect.py  schema.py  server.py
plugins/plugin_utils/platform/: base_transform.py  base_transform_test.py  loader.py  loader_test.py  registry.py  types.py  types_test.py
plugins/plugin_utils/user_models/: adaptive_policy.py  adaptive_policy_test.py  admin.py  admin_test.py  air_marshal.py  air_marshal_test.py  appliance_rf_profile.py  appliance_rf_profile_test.py  appliance_ssid.py  appliance_ssid_test.py  branding_policy.py  branding_policy_test.py  camera_quality_retention_profile.py  camera_quality_retention_profile_test.py  camera_wireless_profile.py  camera_wireless_profile_test.py  config_template.py  config_template_test.py  device.py  device_management_interface.py  device_management_interface_test.py  device_switch_routing.py  device_switch_routing_test.py  device_test.py  ethernet_port_profile.py  ethernet_port_profile_test.py  facts.py  firewall.py  firewall_test.py  firmware_upgrade.py  firmware_upgrade_test.py  floor_plan.py  floor_plan_test.py  group_policy.py  group_policy_test.py  meraki_auth_user.py  meraki_auth_user_test.py  mqtt_broker.py  mqtt_broker_test.py  network_settings.py  (+55 more)
(+1643 files in other folders)
